--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,10 +9,20 @@
     <link rel='stylesheet' type='text/css'  href="/style.css" />
     <meta charset="utf-8" />
     <title>Login</title>
-    <h1>Login</h1>
   </head>
 
   <body>
+
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/">Matcha</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li><a href="/registration"><span class="glyphicon glyphicon-log-in"></span> Register</a></li>
+        </ul>
+      </div>
+    </nav>
     <div class="loginForm">
       <form class="text-center border border-light p-4" action="/login" method="POST">
         <label>Username</label>
@@ -44,8 +54,5 @@
           </div>
       </form>
     </div>
-    <form action="/registration">
-      <button type="submit" name="registration">Register</button>
-  </form>
   </body>
 </html>
