--- a/views/update_profile.ejs
+++ b/views/update_profile.ejs
@@ -10,58 +10,98 @@
 
     <meta charset="utf-8" />
     <script type="text/javascript" src="../helpers/helper1.js"></script>
-    <title>Setup Profile</title>
+    <title>Update Profile</title>
+
   </head>
 
-  <body> 
+  <body>
     <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="/">Matcha</a>
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="/">Matcha</a>
+          </div>
+          <ul class="nav navbar-nav">
+            <li><a href="/">Home</a></li>
+            <li class="active"><a href="/updateProfile">Update Profile</a></li>
+            <li><a href="#">Page 2</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="/profile"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
+            <li><a href="/logout"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+          </ul>
         </div>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="/logout"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
-        </ul>
-      </div>
-    </nav>
-
-    <form action="/setProfile/complete" method="POST">
-    <button type="submit" name="profile complete">Profile Complete</button>
-</form>
-
-<div class="setProfilePic">
-  <form action="/setProfile/profilePic" method="POST">
-
-    <% if (profile_picture != null){ %>
-      <label for="profilePic">Profile Picture</label>
-      <br/>
-      <img class="profilePic" src="<%=profile_picture%>" alt="...">
-      <br/><br/><br/><br/><br/><br/><br/><br/><br/>
-      <p>Please upload an image using the upload form first</p>
-      
-     
-      
-    <% } %>
-     
-  <div class="images">
-    <% if (photos != null){
-      if (photos !== []) {
-        for (var j = 0; j < photos.length; j++) { %>
-            <img src="<%=photos[j].image_path%>" class="image_display" id="<%=photos[j].img_id%>" alt="...">
-            <input type="radio" id="<%=photos[j].img_id%>"
-             name="profilePic" value="<%=photos[j].img_id%>">
-        <%   }} 
-   } %>
-  </div>
+      </nav>
     
-      <div class="profileButton"> 
-        <button type="submit" class="btn btn-danger btn-block my-4">Set profile pic</button>
-      </div>
-    </form>
-    </div>
- 
+    <div class="updateProfile3">
+    <label>Name</label>
+    <br />
+    <input type="text" name="name" class="form-control mb-3" />
+    <br />
 
-    <div class="setProfile">
+    <label>Surname</label>
+    <br />
+    <input
+      type="text"
+      name="surname"
+      id="data"
+      required
+      class="form-control mb-4"
+    />
+    <br />
+
+    <label>Username</label>
+    <br />
+    <input
+      type="text"
+      name="username"
+      id="data"
+      required
+      class="form-control mb-4"
+    />
+    <br />
+
+    <label>Email</label>
+    <br />
+    <input
+      type="email"
+      name="email"
+      id="data"
+      required
+      class="form-control mb-4"
+    />
+    <br />
+
+    <label>Password</label>
+    <br />
+    <input
+      type="password"
+      name="password"
+      id="data"
+      min="8"
+      required
+      class="form-control mb-4"
+    />
+    <br />
+
+    <label>Confirm Password</label>
+    <br />
+    <input
+      type="password"
+      name="conf_password"
+      id="data"
+      min="8"
+      required
+      class="form-control mb-4"
+    />
+    <br />
+    <div class="submitButton">
+      <br /><br />
+      <button type="submit" class="btn btn-danger btn-block my-4">
+        Update
+      </button>
+      </div>
+
+    <div class="updateProfile">
       <form
       class="text-center border border-light p-4"
         action="/setProfile"
@@ -70,15 +110,15 @@
       <label for="bio">Gender:</label>
       <br />
     <input type="radio" id="male"
-     name="gender" value="male" required>
+     name="gender" value="male">
     <label for="male">Male</label>
 
     <input type="radio" id="female"
-     name="gender" value="female required">
+     name="gender" value="female">
     <label for="female">Female</label>
 
     <input type="radio" id="bisexual"
-     name="gender" value="bisexual" required>
+     name="gender" value="bisexual">
     <label for="bisexual">Bisexual</label>
 
     <hr />
@@ -88,32 +128,32 @@
       <label for="pref_gender">Prefered Gender:</label>
       <br />
     <input type="radio" id="male"
-     name="pref_gender" value="male" required>
+     name="pref_gender" value="male">
     <label for="male">Male</label>
 
     <input type="radio" id="female"
-     name="pref_gender" value="female" required>
+     name="pref_gender" value="female">
     <label for="female">Female</label>
 
     <input type="radio" id="bisexual"
-     name="pref_gender" value="bisexual" required>
+     name="pref_gender" value="bisexual">
     <label for="bisexual">Bisexual</label>
 
     <hr />
     <label for="age">Age</label>
-    <input type="number" id="age" name="age" min="18" max="70" required>
+    <input type="number" id="age" name="age" min="18" max="70">
 
     <hr />
       <br />
     
       <div class="form-group">
         <label for="bio">Bio:</label>
-        <textarea class="form-control" rows="5" id="bio" name="bio" required></textarea>
+        <textarea class="form-control" rows="5" id="bio" name="bio"></textarea>
       </div>
       <br /><br /><br />
       <div class="submitButton">
         <button type="submit" class="btn btn-danger btn-block my-4">
-          Submit
+          Update
         </button>
       </div>
       </form>
@@ -121,7 +161,7 @@
 
       <hr />
       <br />
-      <div class="setProfile4">
+      <div class="updateProfile4">
         <form action="/setProfile/interests" method="POST"> 
           <label for="interests">Interests</label>
           <input type="text" name="interests" id="interests" class="form-control mb-3"/>
@@ -137,7 +177,7 @@
       <hr />
       <br /> 
       
-      <div class="setProfile2">
+      <div class="updateProfile2">
         <form action="/uploads" enctype="multipart/form-data" method="POST"> 
           <input type="file" name="image" accept="image/*" class="file_input" required/>
           <br />
@@ -154,10 +194,7 @@
               for (var j = 0; j < photos.length; j++) { %>
               <div class="col-sm profil-gal">
                   <img src="<%=photos[j].image_path%>" class="image_display" id="<%=photos[j].img_id%>" alt="...">
-                  <form action="/setProfile/delete" method="POST">
-                    <br/>
-                  <button name="deletebtn" value="<%=photos[j].img_id%>" type="submit">delete</button>
-                  </form>
+                  <button onclick="deleteImage('<%=photos[j].img_id%>', '<%=photos[j].username%>')">delete</button>
                       
               </div>
               <%   }} 
