--- a/views/reset_password.ejs
+++ b/views/reset_password.ejs
@@ -8,7 +8,7 @@
     />
     <link rel='stylesheet' type='text/css'  href="/style.css" />
     <meta charset="utf-8" />
-    <title>Login</title>
+    <title>reset password</title>
   </head>
 
   <body>
@@ -24,7 +24,7 @@
       </div>
     </nav>
     <div class="loginForm">
-      <form class="text-center border border-light p-4" action="/login" method="POST">
+      <form class="text-center border border-light p-4" action="/resetPassword" method="POST">
         <label>Username</label>
         <br/>
         <input 
@@ -33,28 +33,13 @@
             required 
             class="form-control mb-3"/>
         <br/><br/><br/>
-
-        <label>Password</label>
-        <br/>
-        <input 
-            type="password" 
-            name="password" 
-            min="8" 
-            required 
-            class="form-control mb-3"/>
-        <br/><br/><br/>
         <div class="submitButton">
           <br /><br />
           <button type="submit" class="btn btn-danger btn-block my-4">
-            Login
+            submit
           </button>
           <div class='message'><%= msg %></div>
           </div>
-      </form>
-    </div>
-    <div class="forgotPassword">
-      <form action="/resetPassword" method="GET">
-        <button type="submit" class="btn btn-success btn-block my-4">Forgot Password?</button>
       </form>
     </div>
   </body>
