--- a/views/set_profile.ejs
+++ b/views/set_profile.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
       rel="stylesheet"
       href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"
@@ -17,17 +17,18 @@
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">Matcha</a>
+          <a class="navbar-brand">Matcha</a>
         </div>
+        <ul class="nav navbar-nav">
+          <li><a href="#"> Search</a></li>
+        </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/logout"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
         </ul>
       </div>
     </nav>
 
-    <form action="/setProfile/complete" method="POST">
-    <button type="submit" name="profile complete">Profile Complete</button>
-</form>
+  
 
 <div class="setProfilePic">
   <form action="/setProfile/profilePic" method="POST">
@@ -36,14 +37,11 @@
       <label for="profilePic">Profile Picture</label>
       <br/>
       <img class="profilePic" src="<%=profile_picture%>" alt="...">
-      <br/><br/><br/><br/><br/><br/><br/><br/><br/>
-      <p>Please upload an image using the upload form first</p>
-      
-     
       
     <% } %>
      
   <div class="images">
+    <p>Please upload an image using the upload form first</p>
     <% if (photos != null){
       if (photos !== []) {
         for (var j = 0; j < photos.length; j++) { %>
@@ -52,10 +50,12 @@
              name="profilePic" value="<%=photos[j].img_id%>">
         <%   }} 
    } %>
+  
   </div>
     
       <div class="profileButton"> 
         <button type="submit" class="btn btn-danger btn-block my-4">Set profile pic</button>
+        
       </div>
     </form>
     </div>
@@ -63,10 +63,7 @@
 
     <div class="setProfile">
       <form
-      class="text-center border border-light p-4"
-        action="/setProfile"
-        method="POST"
-      >
+      class="text-center border border-light p-4" action="/setProfile" method="POST">
       <label for="bio">Gender:</label>
       <br />
     <input type="radio" id="male"
@@ -74,7 +71,7 @@
     <label for="male">Male</label>
 
     <input type="radio" id="female"
-     name="gender" value="female required">
+     name="gender" value="female" required>
     <label for="female">Female</label>
 
     <input type="radio" id="bisexual"
@@ -132,6 +129,21 @@
             </button>
           </div>  
         </form>
+        <div class="displayTags">
+          <% if (tags != null){
+            if (tags !== []) {
+              for (var j = 0; j < tags.length; j++) { %>
+                <div class="tagBlocks">
+                 <p><%=tags[j].interests%></p>
+                  <form action="/setProfile/deleteInterest" method="POST">
+                      <button name="deleteTag" value="<%=tags[j].id%>" type="submit">x</button>
+                  </form>
+              </div>
+              <%   }} 
+         } %>
+         
+        </div>
+
       </div>
       
       <hr />
@@ -163,7 +175,12 @@
               <%   }} 
          } %>
       </div> 
-      </div>
-    
+    </div>
   </body>
+  
+  <div class="completeProfile">
+    <form action="/setProfile/complete" method="POST">
+      <button type="submit" name="profile complete" class="btn btn-success btn-block my-4">Profile Complete</button>
+    </form>
+  </div>
 </html>
