--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,7 +22,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">Home</a></li>
         <li><a href="/updateProfile">Update Profile</a></li>
-        <li><a href="#">Page 2</a></li>
+        <li><a href="/chat">Chat</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/profile"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
