--- a/public/style.css
+++ b/public/style.css
@@ -362,3 +362,10 @@ body, html{
     height: 20%;
     width: 70%;
 }
+
+.errorMsg{
+    width: 100%;
+    background-color:darkred;
+    color: white;
+    text-align: center;
+}
