--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -91,7 +91,8 @@
             Register
           </button>
           </div>
-      </form>
+        </form>
+      <div class='message'><%=msg%></div>
     </div>
   </body>
 </html>
