added error messages

--- a/views/set_profile.ejs
+++ b/views/set_profile.ejs
@@ -32,6 +32,10 @@
     <p><%=msg%></p>
   </div>
 
+  <div class="errorMsg">
+    <p><%=errMsg%></p>
+  </div>
+
 <div class="setProfilePic">
   <form action="/setProfile/profilePic" method="POST">
 
