--- a/views/update_profile.ejs
+++ b/views/update_profile.ejs
@@ -35,6 +35,10 @@
       <div class="errorMsg">
         <p><%=msg%></p>
       </div>
+
+      <div class="errorMsg">
+        <p><%=errMsg%></p>
+      </div>
     
       
     <div class="updateProfilePic">
