--- a/public/style.css
+++ b/public/style.css
@@ -111,10 +111,30 @@ body, html{
     position: relative;
     top: 45%;
     left: 45%;
-    transform: translate(15%, -50%);
+    transform: translate(15%, 50%);
     border-radius: 3%;
     border: 1px solid rgb(131, 130, 130);
     background-color: white;
+}
+
+.profile22 {
+    width: 45%;
+    height: 80%;
+    text-align: center;
+    position: relative;
+    top: 45%;
+    left: 45%;
+    transform: translate(-43%, 20%);
+    border-radius: 3%;
+    border: 1px solid rgb(131, 130, 130);
+    background-color: white;
+}
+.circle_pic img
+{
+    top: 15%;
+    
+    /* transform: translate(-30%, 120%); */
+    border-radius: 50%;  
 }
 
 .profilePic {
@@ -259,6 +279,7 @@ body, html{
     justify-content: center;
     align-items: center;
     display: none;
+    z-index: 1;
 }
 .bg_modal2{
     width: 100%;
@@ -269,6 +290,8 @@ body, html{
     justify-content: center;
     align-items: center;
     display: none;
+    
+ z-index: 1;
 }
 
 
@@ -278,9 +301,12 @@ body, html{
     height: 200px;
     background-color: white;
     text-align: center;
+    position: absolute;
+    z-index: 1;
 }
 .big_img{
     margin: 10px 50px;
+    position: relative;
 
 }
 .pic_1 img{
@@ -289,6 +315,8 @@ body, html{
     float: left;
     filter: grayscale(100%);
     transition: 0.1s;
+    z-index: 0;
+    position: relative;
 }
 .pic_1 img:hover{
     filter: grayscale(0%);
