--- a/public/style.css
+++ b/public/style.css
@@ -369,3 +369,29 @@ body, html{
     color: white;
     text-align: center;
 }
+
+.getLocation {
+    width: 50%;
+    height: 25%;
+    text-align: center;
+    position: relative;
+    top: 45%;
+    left: 55%;
+    transform: translate(-60%, -150%);
+    border-radius: 3%;
+    border: 1px solid rgb(131, 130, 130);
+    background-color: white;
+}
+
+.updateLocation {
+    width: 100%;
+    height: 25%;
+    text-align: center;
+    position: relative;
+    top: 45%;
+    left: 55%;
+    transform: translate(-55%, -150%);
+    border-radius: 3%;
+    border: 1px solid rgb(131, 130, 130);
+    background-color: white;
+}
